# UITFederated

./: requirement.txt
Client/flower_client/: client.py  client_app.py  pyproject.toml  task.py
Client/flowerclient/: README.md  client.py  pyproject.toml
Client/flowerclient/flowerclient/: __init__.py  client_app.py  server_app.py  task.py
Client/pages/: ClientDetail.py  History.py  Main.py  Training.py
Server/flower_server/: aggregated_loss.json  final_accuracy.json  pyproject.toml  round-1-weights.npz  server.py  server_app.py  superlink.py
