[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tfflower"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.15.2",
    "flwr-datasets[vision]>=0.5.0",
    "tensorflow>=2.11.1,<2.18.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "kha"

[tool.flwr.app.components]
clientapp = "tfflower.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 1
local-epochs = 1
batch-size = 32
verbose = false
learning-rate = 0.005
fraction-fit = 1.0

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true


